# brand-voice

./: package-lock.json  package.json
app/: page.tsx
app/api/analyze/: route.ts
backend/: llama_server.py  pyproject.toml
data/: tim.txt
